Fix #6612: prevent textarea resize overlap

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-base.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-base.less
@@ -286,6 +286,10 @@
         }
     }
 
+    .xforms-textarea textarea {
+        resize: vertical;
+    }
+
     // ***** General Layout ********************************************************************************************
 
     // Language and mode selectors
